--- a/www/main.less
+++ b/www/main.less
@@ -1,72 +1,64 @@
-@blue: cornflowerblue;
+@import 'normalize.less';
+
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600);
+
+
+.cf {
+    &:before,
+    &:after {
+        content: " "; /* 1 */
+        display: table; /* 2 */
+    }
+    &:after {
+        clear: both;
+    }
+    zoom: 1;
+}
+
+
+html {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 100%;
+    line-height: 1.3;
+    -webkit-font-smoothing: antialiased
+}
 
 body {
-    font-family: "Avenir Next", "Trebuchet MS", "Helvetica", "Arial", sans-serif;
-    font-size: 1.25em;
-    line-height: 1.4;
-    background: #F0F0F0;
-    color: #444;
-    margin: 0 auto;
-    padding: 1.25em 1.25em 5em 1.25em;
-    max-width: 35em;
-}
+    &>header>.banner, &>main>aside, &>main>article, &>footer>p {
+        margin: 0 auto;
+        width: 48em;
+    }
 
-h1 {
-    font-size: 3em;
-    font-weight: 500;
-    line-height: 0.9;
-    p {
-        font-size: 1.33em;
+    &>header {
+        height: 5em;
+        background: #42474b;
+        color: #fff;
     }
 }
 
-ul, ol {
-    padding-left: 0;
+.brand {
+    font-size: 3.8em;
+    float: left;
+    margin: 0;
+    padding: 0;
 }
 
-ul, li {
-    list-style: none;
-}
+nav.main {
+    float: right;
+    margin-top: 2em;
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
 
-a {
-    color: @blue;
-    &:hover, &:focus, &:active {
-        color: lighten(@blue, 10%);
+        li {
+            margin-left: 1.2em;
+            float: left;
+        }
     }
-}
 
-nav a {
-    padding: 0.5em;
-    margin-left: -0.5em;
-    margin-right: 0.5em;
-}
-
-footer {
-    margin: 2em 0;
-}
-
-img {
-    width: 100%;
-    @media (min-width: 35em) {
-        width: 120%;
-        margin-left: -10%;
-        margin-right: -10%;
-        border-radius: 0.15em;
+    a {
+        color: #fff;
+        text-decoration: none;
     }
-}
-
-pre {
-    padding: 0.75em;
-    border-radius: 0.15em;
-    background: #444;
-    word-break: break-all;
-    word-wrap: break-word;
-    code {
-        color: #CFCFCF;
-    }
-}
-
-code {
-    font-family: "Source Code Pro", Menlo, monospace;
-    font-size: 90%;
 }
