--- a/www/_layout.jade
+++ b/www/_layout.jade
@@ -3,13 +3,14 @@ html
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title="tote - A thin namespaced wrapper for localStorage"
+    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Maven+Pro")
     link(rel="stylesheet", href="theme/default.css" media="screen")
-    script(src="prism.js", type="text/javascript")
+    script(src="dist/tote.js", type="text/javascript")
   body
 
     header
       .row.centered
-        .brand.col-6 tote
+        .logo.col-6 tote
         nav.main.col-6
           ul
             li
@@ -20,31 +21,28 @@ html
 
     .preface
       .row.centered
-        section.blurb.col-6
-          p A thin namespaced wrapper for localStorage
+        section.col-6
+          p.tagline A thin namespaced wrapper for localStorage
+          p.blurb.
+            Use localStorage as though it is a bunch of small containers for specific areas of your app.
+            As a bonus, you are free to store and retrive any datatype -- not just strings!
 
-        section.quickstart.col-6
+        section.synopsis.col-6
           :markdown
             ```javascript
-                var prefs = tote('preferences');
-                prefs.set('theme', 'something');
-                prefs.get('theme');
-                // 'something'
+            var prefs = tote('settings');
+
+            prefs.set('enableSync', true);
+            prefs.get('enableSync');
+            // true
+
+            prefs.remove('enableSync');
+            prefs.get('enableSync');
+            // null
             ```
 
       .row.centered
-        section.overview.col-6
-          p.
-            tote enables you to interact with localStorage as though it is a bunch of 
-            small containers where you stash specific things. Each "namespaced" instance 
-            writes to the same underlying data store, but does not interfere with any others.
-
-        section.download.col-6
-          h3 Download the latest version
-          p 
-            small v0.2.1-a released Feb 4 2004
-          a(class="btn" href="dist/tote.js") Download Full
-          a(class="btn" href="dist/tote.min.js") Download Minified
+        hr.divider
 
 
     main
@@ -57,3 +55,6 @@ html
       .row.centered
         .col-12 
           small Copyright &copy; 2014 Rudy Lattae | MIT License
+
+
+    script(src="prism.js", type="text/javascript")
