--- a/www/theme/default.less
+++ b/www/theme/default.less
@@ -7,56 +7,95 @@
 
 /* ======================== */
 
-@body-background: @black-30;
-@text-color: @black-70;
+@brand-primary: #25B0CA;
+@brand-secondary: #8F6040;
+@brand-normal: @black-30;
+@brand-loud: #fff;
+@brand-muted: @black-50;
 
-@header-background: @black-80;
-@header-text-color: #fff;
+@body-background: @black-80;
+@text-color: @brand-normal;
 
-@footer-background: @black-50;
-@footer-text-color: @black-10;
+@header-background-color: #212121;
+@header-background: @header-background-color;
+@header-text-color: @brand-loud;
+
+@footer-background: @black-70;
+@footer-text-color: @brand-muted;
+
+@blurb-text-color: @black-30;
+
+@link-color-visited: lighten(@link-color, 20%);
+
+.linear-gradient(@direction: left, @startColor: rgba(0,0,0,0), @midColor: rgba(0,0,0,0.75), @endColor: rgba(0,0,0,0)) {
+  background-image: -webkit-linear-gradient(@direction, @startColor, @midColor, @endColor);
+  background-image: -moz-linear-gradient(@direction, @startColor, @midColor, @endColor);
+  background-image: -ms-linear-gradient(@direction, @startColor, @midColor, @endColor);
+  background-image: -o-linear-gradient(@direction, @startColor, @midColor, @endColor);
+}
+
+.inner-shadow(@horizontal:0, @vertical:1px, @blur:2px, @alpha: 0.4) {
+  -webkit-box-shadow: inset @horizontal @vertical @blur rgba(0, 0, 0, @alpha);
+  -moz-box-shadow: inset @horizontal @vertical @blur rgba(0, 0, 0, @alpha);
+  box-shadow: inset @horizontal @vertical @blur rgba(0, 0, 0, @alpha);
+}
 
 
 /* ======================== */
 
 .row {
-    .make-row;
+  .make-row;
 }
 .centered {
-    .center-block;
-    max-width: 48em;
+  .center-block;
+  max-width: 48em;
 }
 
 .col-4 {
-    .make-column(4);
+  .make-column(4);
 }
 .col-6 {
-    .make-column(6);
+  .make-column(6);
 }
 .col-8 {
-    .make-column(8);
+  .make-column(8);
 }
 .col-12 {
-    .make-column(12);
+  .make-column(12);
 }
 
 
 /* ======================== */
 
 * {
-    .box-sizing(border-box);
+  .box-sizing(border-box);
 }
 
 html {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 100%;
-    line-height: 1.3;
-    -webkit-font-smoothing: antialiased
+  font-family: "Maven Pro", "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 100%;
+  line-height: 1.3;
+  -webkit-font-smoothing: antialiased
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: @brand-secondary;
+}
+h2 {
+  margin-top: 2.2em;
+}
+
+em, strong {
+  color: @brand-loud;
 }
 
 a {
   color: @link-color;
   text-decoration: none;
+
+  &:visited {
+    color: @link-color-visited;
+  }
 
   &:hover, &:active, &:focus {
     color: @link-color-hover;
@@ -64,122 +103,217 @@ a {
   }
 }
 
-.btn {
-    display: block;
-    padding: 15px 20px;
-    margin-bottom: 5px;
-    font-weight: bold;
-    line-height: 1;
-    letter-spacing: -1px;
-    text-align: center;
-    background-color: @brand-primary;
-    border: 1px solid darken(@brand-primary, 15%);
-    border-radius: 5px;
-    cursor: pointer;
-    color: #fff;
-    
-    &:hover, &:active, &:focus {
-        text-decoration: none;
-        background-color: lighten(@brand-primary, 10%);
-    }
+dl {
+  padding: 0.5em;
 
-    &:active {
-        box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.3);
-    }
+  dt {
+    font-size: 0.9em;
+  }
+  dt:after {
+    content: ":";
+  }
+  dd {
+    margin-bottom: 0.6em;
+    margin-left: 0;
+    font-weight: bold;
+  }
+}
+
+small {
+  color: @brand-muted;
+}
+
+.well {
+  .inner-shadow;
+  border-radius: 0.3em;
+}
+
+.btn {
+  display: block;
+  padding: 15px 20px;
+  margin-bottom: 5px;
+  font-weight: bold;
+  line-height: 1;
+  letter-spacing: -1px;
+  text-align: center;
+  border: 1px solid @black-60;
+  border-radius: 5px;
+  cursor: pointer;
+  color: @black-50;
+  background-color: @black-70;
+
+  &:visited, &:hover, &:active, &:focus {
+    text-decoration: none;
+    color: @black-80;
+    font-weight: bold;
+    border-color: @black-50;
+    background-color: @black-30;
+  }
+
+  &:active {
+    .inner-shadow(@vertical:3px, @blur:6px);
+  }
+}
+
+.btn-primary {
+  background-color: darken(@brand-primary, 10%);
+  color: @black-20;
+  border-color: darken(@brand-primary, 5%);
+
+  &:hover, &:active, &:focus {
+    color: @black-90;
+    text-decoration: none;
+    background-color: @brand-primary;
+    border-color: @brand-primary;
+  }
+}
+
+.divider {
+  margin-top: 1.8em;
+  margin-bottom: 0;
+  border: 0;
+  height: 1px;
+  .linear-gradient(@midColor:rgba(255,255,255,0.2));
 }
 
 
 /* ======================== */
 
 body {
-    background: @footer-background;
-    color: @text-color;
+  background: @footer-background;
+  color: @text-color;
+  font-size: 1.02em;
 
-    &>header {
-        background: @header-background;
+  &>header {
+    background: @header-background-color;
+    color: @header-text-color;
+
+    a {
+      color: @header-text-color;
+      text-decoration: none;
+
+      &:visited {
         color: @header-text-color;
+        text-decoration: none;
+      }
 
-        a {
-            color: @header-text-color;
-            text-decoration: none;
-        }
-        a:active, a:hover, a:focus {
-            color: darken(@header-text-color, 3px0%);
-            text-decoration: none;
-        }
+      &:hover, &:active, &:focus{
+        color: @brand-primary;
+        text-decoration: none;
+      }
     }
+  }
 
-    &>.preface {
-        background: @body-background;
-    }
+  &>.preface {
+    #gradient > .vertical(@header-background-color, @body-background);
+  }
 
-    &>main {
-        background: @body-background;
-    }
+  &>main {
+    background: @body-background;
+  }
 
-    &>footer {
-        background: @footer-background;
+  &>footer {
+    background: @footer-background;
+    color: @footer-text-color;
+    min-height: 1.6em;
+
+    a {
+      color: @footer-text-color;
+      text-decoration: none;
+
+      &:visited {
         color: @footer-text-color;
+        text-decoration: none;
+      }
 
-        a {
-            color: @footer-text-color;
-            text-decoration: none;
-        }
-        a:active, a:hover, a:focus {
-            color: darken(@footer-text-color, 3px0%);
-            text-decoration: none;
-        }
+      &:active, &:hover, &:focus {
+        color: darken(@footer-text-color, 30%);
+        text-decoration: none;
+      }
     }
+  }
 }
 
 
-.brand {
-    font-size: 3.8em;
+.logo {
+  color: @brand-primary;
+  font-size: 3.8em;
 }
 
 nav.main {
+  .clearfix;
+  ul {
     .clearfix;
-    ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
+    list-style: none;
+    margin: 0.2em 0;
+    padding: 0;
 
-        li {
-            margin-right: 1.2em;
-            float: left;
-        }
+    li {
+      margin-right: 1.2em;
+      float: left;
     }
-}
-
-.blurb {
-    font-size: 2em;
-    p {
-        margin: 0.8em 0;
+    li:last-child {
+      margin-right: 0;
     }
-}
-.quickstart {
+  }
 }
 
-pre[class*="language-"] {
-    padding: 0.8em 0;
+.tagline {
+  font-size: 1.8em;
+  color: @blurb-text-color;
+  p {
+    margin: 0.8em 0;
+  }
 }
+.synopsis {
+}
+
 code {
-    font-size: 0.8em;
-};
+  font-size: 1em;
+}
 
 
 /* ====================================== */
 
 @media only screen and (min-width: @grid-float-breakpoint) {
 
-    nav.main {
-        margin-top: 2em;
-    }
+  dl {
+    .clearfix;
 
-    .btn {
-        display: inline-block;
-        margin-right: 0.5em;
+    dt {
+      float: left;
+      clear: left;
+      width: 10em;
+      text-align: right;
+      display: inline-block;
     }
+    dt:after {
+      content: ":";
+    }
+    dd {
+      margin-left: 1em;
+      display: inline-block;
+      float: left;
+      clear: right;
+    }
+  }
+
+  nav.main {
+    font-size: 1.2em;
+    margin-top: 1.5em;
+    &>ul {
+      float: right;
+    }
+  }
+
+  .btn {
+    display: inline-block;
+    margin-right: 0.5em;
+  }
+
+  code {
+    font-size: 0.78em;
+  }
 }
 
 
