--- a/www/_layout.jade
+++ b/www/_layout.jade
@@ -2,10 +2,10 @@
 html
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title="tote - A thin namespaced wrapper for localStorage"
+    title="tote - A thin namespaced localStorage API"
     link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Maven+Pro")
     link(rel="stylesheet", href="theme/default.css" media="screen")
-    script(src="dist/tote.js", type="text/javascript")
+    script(type="text/javascript", src="dist/tote.js")
   body
 
     header
@@ -23,30 +23,48 @@ html
               a(href="http://jsperf.com/tote-vs-native-storage") Performance
             li
               a(href="https://github.com/rudylattae/tote") GitHub
+            li
+              <iframe src="http://ghbtns.com/github-btn.html?user=rudylattae&repo=tote&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="75" height="20"></iframe>
 
 
     .preface
       .row.centered
+        section.col-12
+          p.note.note-danger
+            strong IMPORTANT: 
+            | tote is not yet stable so you should not use it in production. If you like what you see so far,
+            | star it on GitHub so I know you want to use it.
+
         section.col-6
           p.tagline A thin namespaced localStorage API.
+          
           p.blurb.
             tote is a tiny JavaScript library that turns localStorage into isolated containers. 
             You can store multiple sets of data in the same app without fear of key collisions.
+          
           p As a bonus, you get to store and retrive Integer, Strings, Booleans, whatever -- not just strings!
+          
+        section.pulse.col-6
+          dl.well.muted
+            dt Status
+            dd Unstable Aplha
+            dt Version
+            dd v0.2.1-a | 
+              date Feb 4 2004
+            dt License
+            dd Open Source -- MIT
+            dt Install with
+            dd Bower, Component... soon
+            dt Environments
+            dd Browser
+            dt Resources
+            dd
+              a(href="https://github.com/rudylattae/tote", title="Source repo and issue tracker") GitHub
+              , 
+              a(href="https://huboard.com/rudylattae/tote", title="Project Roadmap and Kanban board") Huboard
 
-        section.synopsis.col-6
-          :markdown
-            ```javascript
-            var about = tote('about-tote');
-
-            about.set('tags', ['simple', 'tiny']);
-            console.log( about.get('tags') );
-            // ['simple', 'tiny']
-
-            about.set('isActive', true);
-            console.log( about.get('isActive') );
-            // true
-            ```
+          a(href="dist/tote.js" class="btn btn-primary") Download Full
+          a(href="dist/tote.min.js" class="btn") Download Minified
 
       .row.centered
         hr.divider
@@ -64,4 +82,4 @@ html
           small Copyright &copy; 2014 Rudy Lattae | MIT License
 
 
-    script(src="prism.js", type="text/javascript")
+    script(type="text/javascript", src="lib/prism.js")
