--- a/www/_layout.jade
+++ b/www/_layout.jade
@@ -2,7 +2,9 @@
 html
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title="tote - A thin namespaced localStorage API"
+    meta(name="keywords", content=keywords)
+    meta(name="description", content=description)
+    title=title
     link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Maven+Pro")
     link(rel="stylesheet", href="theme/default.css" media="screen")
     script(type="text/javascript", src="dist/tote.js")
@@ -58,8 +60,8 @@ html
             dt Status
             dd Unstable Aplha
             dt Version
-            dd v0.2.2-a | 
-              date Feb 15 2004
+            dd #{version} | 
+              date #{releaseDate}
             dt License
             dd Open Source -- MIT
             dt Install with
